# synth

./: README.md  oscillator_strengths.yml  pyproject.toml  rest_wavelengths.yml
.ipynb_checkpoints/: constants-checkpoint.py
synth/: SynTH.py  atomic_rates.py
